tests/baselines/reference/declFileTypeAnnotationTupleType.errors.txt
declFileTypeAnnotationTupleType.ts(3,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== declFileTypeAnnotationTupleType.ts (1 errors) ====
    class c {
    }
    module m {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class c {
        }
        export class g<T> {
        }
    }
    class g<T> {
    }
    
    // Just the name
    var k: [c, m.c] = [new c(), new m.c()];
    var l = k;
    
    var x: [g<string>, m.g<number>, () => c] = [new g<string>(), new m.g<number>(), () => new c()];
    var y = x;